syntax = "proto3";

package redpanda.api.console.v1alpha1;

import "redpanda/api/dataplane/v1/pipeline.proto";

message CreatePipelineRequest {
  redpanda.api.dataplane.v1.CreatePipelineRequest request = 1;
}

message CreatePipelineResponse {
  redpanda.api.dataplane.v1.CreatePipelineResponse response = 1;
}

message GetPipelineRequest {
  redpanda.api.dataplane.v1.GetPipelineRequest request = 1;
}

message GetPipelineResponse {
  redpanda.api.dataplane.v1.GetPipelineResponse response = 1;
}

message DeletePipelineRequest {
  redpanda.api.dataplane.v1.DeletePipelineRequest request = 1;
}

message DeletePipelineResponse {
  redpanda.api.dataplane.v1.DeletePipelineResponse response = 1;
}

message ListPipelinesRequest {
  redpanda.api.dataplane.v1.ListPipelinesRequest request = 1;
}

message ListPipelinesResponse {
  redpanda.api.dataplane.v1.ListPipelinesResponse response = 1;
}

message UpdatePipelineRequest {
  redpanda.api.dataplane.v1.UpdatePipelineRequest request = 1;
}

message UpdatePipelineResponse {
  redpanda.api.dataplane.v1.UpdatePipelineResponse response = 1;
}

message StopPipelineRequest {
  redpanda.api.dataplane.v1.StopPipelineRequest request = 1;
}

message StopPipelineResponse {
  redpanda.api.dataplane.v1.StopPipelineResponse response = 1;
}

message StartPipelineRequest {
  redpanda.api.dataplane.v1.StartPipelineRequest request = 1;
}

message StartPipelineResponse {
  redpanda.api.dataplane.v1.StartPipelineResponse response = 1;
}

message GetPipelineServiceConfigSchemaRequest {
  redpanda.api.dataplane.v1.GetPipelineServiceConfigSchemaRequest request = 1;
}

message GetPipelineServiceConfigSchemaResponse {
  redpanda.api.dataplane.v1.GetPipelineServiceConfigSchemaResponse response = 1;
}

message GetPipelinesForSecretRequest {
  redpanda.api.dataplane.v1.GetPipelinesForSecretRequest request = 1;
}

message GetPipelinesForSecretResponse {
  redpanda.api.dataplane.v1.GetPipelinesForSecretResponse response = 1;
}

message GetPipelinesBySecretsRequest {
  redpanda.api.dataplane.v1.GetPipelinesBySecretsRequest request = 1;
}

message GetPipelinesBySecretsResponse {
  redpanda.api.dataplane.v1.GetPipelinesBySecretsResponse response = 1;
}

service PipelineService {
  rpc CreatePipeline(CreatePipelineRequest) returns (CreatePipelineResponse) {}

  rpc GetPipeline(GetPipelineRequest) returns (GetPipelineResponse) {}

  rpc DeletePipeline(DeletePipelineRequest) returns (DeletePipelineResponse) {}

  rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse) {}

  rpc UpdatePipeline(UpdatePipelineRequest) returns (UpdatePipelineResponse) {}

  rpc StopPipeline(StopPipelineRequest) returns (StopPipelineResponse) {}

  rpc StartPipeline(StartPipelineRequest) returns (StartPipelineResponse) {}

  rpc GetPipelineServiceConfigSchema(GetPipelineServiceConfigSchemaRequest) returns (GetPipelineServiceConfigSchemaResponse) {}

  rpc GetPipelinesForSecret(GetPipelinesForSecretRequest) returns (GetPipelinesForSecretResponse) {}

  rpc GetPipelinesBySecrets(GetPipelinesBySecretsRequest) returns (GetPipelinesBySecretsResponse) {}
}
