syntax = "proto3";

package redpanda.api.console.v1alpha1;

import "redpanda/api/dataplane/v1alpha2/secret.proto";

message GetSecretRequest {
  redpanda.api.dataplane.v1alpha2.GetSecretRequest request = 1;
}

message GetSecretResponse {
  redpanda.api.dataplane.v1alpha2.GetSecretResponse response = 1;
}

message ListSecretsRequest {
  redpanda.api.dataplane.v1alpha2.ListSecretsRequest request = 1;
}

message ListSecretsResponse {
  redpanda.api.dataplane.v1alpha2.ListSecretsResponse response = 1;
}

message CreateSecretRequest {
  redpanda.api.dataplane.v1alpha2.CreateSecretRequest request = 1;
}

message CreateSecretResponse {
  redpanda.api.dataplane.v1alpha2.CreateSecretResponse response = 1;
}

message UpdateSecretRequest {
  redpanda.api.dataplane.v1alpha2.UpdateSecretRequest request = 1;
}

message UpdateSecretResponse {
  redpanda.api.dataplane.v1alpha2.UpdateSecretResponse response = 1;
}

message DeleteSecretRequest {
  redpanda.api.dataplane.v1alpha2.DeleteSecretRequest request = 1;
}

message DeleteSecretResponse {
  redpanda.api.dataplane.v1alpha2.DeleteSecretResponse response = 1;
}

message ListSecretScopesRequest {
  redpanda.api.dataplane.v1alpha2.ListSecretScopesRequest request = 1;
}

message ListSecretScopesResponse {
  redpanda.api.dataplane.v1alpha2.ListSecretScopesResponse response = 1;
}

service SecretService {
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}

  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse) {}

  rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {}

  rpc UpdateSecret(UpdateSecretRequest) returns (UpdateSecretResponse) {}

  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {}

  rpc ListSecretScopes(ListSecretScopesRequest) returns (ListSecretScopesResponse) {}
}
